--- a/bmt-common/build.gradle
+++ b/bmt-common/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    implementation("org.springframework.cloud:spring-cloud-starter-netflix-eureka-server")
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
