- member-admin: memberController 주석 제거

--- a/bmt-admin/src/main/resources/application.yml
+++ b/bmt-admin/src/main/resources/application.yml
@@ -23,3 +23,19 @@ spring:
       hibernate:
         show_sql: true
         format_sql: true
+
+---
+spring:
+  config:
+    activate:
+      on-profile: dev
+---
+spring:
+  config:
+    activate:
+      on-profile: stage
+---
+spring:
+  config:
+    activate:
+      on-profile: prod
