--- a/bmt-admin/src/main/resources/application.yml
+++ b/bmt-admin/src/main/resources/application.yml
@@ -1,10 +1,14 @@
+server:
+  port: 9999
 spring:
   application:
     name: member-admin
   profiles:
-    active: local
+    active: dev
     include:
       - jwt
+  config:
+    import: optional:configserver:http://localhost:8888 # configserver와 통신 실패시 서버 실행을 멈추지 않으려면 optional 필수
   h2:
     console:
       enabled: true
