- member-admin: spring-boot-starter actuator 설정

--- a/bmt-admin/src/main/resources/application.yml
+++ b/bmt-admin/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
   application:
     name: member-admin
   profiles:
-    active: dev
+    active: local
     include:
       - jwt
   config:
@@ -28,6 +28,19 @@ spring:
         show_sql: true
         format_sql: true
 
+management:
+  endpoints:
+    enabled-by-default: false # Spring Actuator는 기본적으로 all disable 상태에서 include 하여 화이트 리스트 형태로 운영
+    web:
+      exposure:
+        include: ["env", "refresh", "health"]
+  endpoint:
+    env:
+      enabled: true
+    health:
+      enabled: true
+    refresh:
+      enabled: true
 ---
 spring:
   config:
