--- a/bmt-admin/src/main/resources/application.yml
+++ b/bmt-admin/src/main/resources/application.yml
@@ -34,6 +34,9 @@ management:
     web:
       exposure:
         include: ["env", "refresh", "health"]
+#      base-path: /mng
+#      path-mapping:
+#        health: health-check
   endpoint:
     env:
       enabled: true
