--- a/bmt-app/src/main/resources/application.yml
+++ b/bmt-app/src/main/resources/application.yml
@@ -45,6 +45,23 @@ management:
       enabled: true
     refresh:
       enabled: true
+
+# 외부연계 path
+integration:
+  pass:
+    registration:
+      site-code: BT251
+      site-password: SnMl8XzZK3jH
+      gubun: encodeData
+      req-seq: REQ_SEQ
+    provider:
+      authorize-uri: https://nice.checkplus.co.kr/CheckPlusSafeModel/checkplus.cb
+      redirect-success-uri: http://localhost:8081/app/pass/redirect/success
+      success-uri: http://localhost:8081/app/pass/success
+      redirect-fail-uri: http://localhost:8081/app/pass/redirect/fail
+      fail-uri: http://localhost:8081/app/pass/fail
+  ip-location:
+    base-url: https://api.iplocation.net
 ---
 spring:
   config:
